Remove divider spans because this style is already being performed by a css pseudo element and two slashes were being created (one was white, so it was hard to see)

--- a/site/src/main/twirl/breadcrumbs.scala.html
+++ b/site/src/main/twirl/breadcrumbs.scala.html
@@ -5,13 +5,13 @@
 
     @level(node: spray.site.ContentNode) = {
       @if(node.isRoot) {
-        <li><a href="/">Home</a> <span class="divider">/</span></li>
+        <li><a href="/">Home</a></li>
       } else {
         @level(node.parent)
         @if(node == contentNode) {
           <li class="active">@node.name</li>
         } else {
-          <li><a href="@node.absoluteUri">@node.name</a> <span class="divider">/</span></li>
+          <li><a href="@node.absoluteUri">@node.name</a> </li>
         }
       }
     }
