Rename current case studies section to demos, add case studies

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -56,19 +56,45 @@
 <div id="case-studies">
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <h3>Case Studies</h3>
+                <p>Build radically engaging applications. Explore applications that leverage the high performance geoprocessing capabilities of GeoTrellis.</p>
+            </div>
+            <div class="col-sm-3">
+                <img src="/img/case_study_01.png" />
+                <h4>US Army Corps of Engineers</h4>
+            </div>
+            <div class="col-sm-3">
+                <a class="case-study" href="http://gis.ashevillenc.gov/mapasheville/priorityplaces">
+                    <img src="/img/case_study_02.png" />
+                    <h4>City of Asheville, Priority Places</h4>
+                </a>
+            </div>
+            <div class="col-sm-3">
+                <a class="case-study" href="http://www.wikiwatershed.org/">
+                    <img src="/img/case_study_03.png" />
+                    <h4>Model My Watershed</h4>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="demos">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h3>Demos</h3>
                 <p>Build radically engaging applications. Explore applications that leverage the high performance geoprocessing capabilities of GeoTrellis.</p>
             </div>
             <div class="col-sm-3 col-sm-offset-2">
                 <a class="case-study" href="http://transit.geotrellis.com/">
-                    <img src="/img/case-study_01.jpg" />
+                    <img src="/img/demo_01.jpg" />
                     <h4>GeoTrellis Transit</h4>
                 </a>
             </div>
             <div class="col-sm-3">
                 <a class="case-study" href="http://demo.geotrellis.com/chatta/">
-                    <img src="/img/case-study_02.jpg" />
+                    <img src="/img/demo_02.jpg" />
                     <h4>Chattanooga Models</h4>
                 </a>
             </div>
