Add color differentiation between case studies and demos

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -61,8 +61,10 @@
                 <p>Build radically engaging applications. Explore applications that leverage the high performance geoprocessing capabilities of GeoTrellis.</p>
             </div>
             <div class="col-sm-3">
-                <img src="/img/case_study_01.png" />
-                <h4>US Army Corps of Engineers</h4>
+                <a class="case-study" href="#">
+                    <img src="/img/case_study_01.png" />
+                    <h4>US Army Corps of Engineers</h4>
+                </a>
             </div>
             <div class="col-sm-3">
                 <a class="case-study" href="http://gis.ashevillenc.gov/mapasheville/priorityplaces">
@@ -87,13 +89,13 @@
                 <p>Build radically engaging applications. Explore applications that leverage the high performance geoprocessing capabilities of GeoTrellis.</p>
             </div>
             <div class="col-sm-3 col-sm-offset-2">
-                <a class="case-study" href="http://transit.geotrellis.com/">
+                <a class="demo" href="http://transit.geotrellis.com/">
                     <img src="/img/demo_01.jpg" />
                     <h4>GeoTrellis Transit</h4>
                 </a>
             </div>
             <div class="col-sm-3">
-                <a class="case-study" href="http://demo.geotrellis.com/chatta/">
+                <a class="demo" href="http://demo.geotrellis.com/chatta/">
                     <img src="/img/demo_02.jpg" />
                     <h4>Chattanooga Models</h4>
                 </a>
