Flip case studies with demos, add CC license, make caret color more consistent

--- a/site/src/main/twirl/footer.scala.html
+++ b/site/src/main/twirl/footer.scala.html
@@ -5,7 +5,7 @@
   <section class="footerLower">
     <div class="container">
       <div class="row-fluid">
-        <div class="span2 copyright">&copy; 2012+ spray.io</div>
+        <div class="span2 copyright"><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></div>
         <div class="span8 footNav">
           <a href="/">Home</a><span>&#124;</span>
 
