--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -6,7 +6,7 @@
         <p>Fast raster processing for the web and the cluster.</p>
         <p>
             <a class="btn btn-primary btn-lg" role="button" href="#what-is-geotrellis">What is GeoTrellis?</a>
-            <a class="btn btn-primary btn-lg" role="button" href="gettingstarted/">Get Started</a>
+            <a class="btn btn-primary btn-lg" role="button" href="introduction/getting-started/">Get Started</a>
         </p>
     </div>
 </div>
