--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -58,7 +58,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h3>Demos</h3>
-                <p>Suspendisse potenti. Donec ut augue est. Donec lobortis congue eros ac aliquet. Morbi laoreet, felis id aliquam facilisis, ipsum tellus viverra risus, ac lacinia libero tortor sed sem.</p>
+                <p>Check out these demo projects that use GeoTrellis. The source for these projects and more can be found at <a href="http://github.com/geotrellis">our github account</a></p>
             </div>
             <div class="col-sm-3 col-sm-offset-2">
                 <a class="demo" href="http://transit.geotrellis.com/">
@@ -80,7 +80,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <h3>Case Studies</h3>
-                <p>Quisque vulputate varius venenatis. Sed at orci volutpat, euismod sem sit amet, pulvinar magna. Proin placerat dolor quis sem dignissim, non imperdiet velit bibendum.</p>
+                <p>Explore applications that leverage the high performance geoprocessing capabilities of GeoTrellis.</p>
             </div>
             <div class="col-sm-3">
                 <a data-toggle="modal" class="case-study" data-target="#coaModal" href="#">
