--- a/site/src/main/twirl/page.scala.html
+++ b/site/src/main/twirl/page.scala.html
@@ -18,9 +18,10 @@
 
     <link href="/css/vendor/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="/css/mentor.min.css" rel="stylesheet"/>
-    <link href="/css/jquery-ui-1.10.4.custom.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-    <link href="/css/vendor/fontello.css" rel="stylesheet">
+
+    <!--link href="/css/vendor/fontello.css" rel="stylesheet"-->
 
     <link href="/css/main.css" rel="stylesheet">
     
@@ -33,9 +34,9 @@
     <script type="text/javascript" src="//use.typekit.net/tjy8olz.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-    <script src="/js/jquery-1.9.1.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/jquery-ui-1.10.4.custom.min.js"></script>
 
     <!-- <link href="/css/skin_blue.css" rel="stylesheet"/> -->
     <!-- <link href="/css/spray.css" rel="stylesheet"/> -->
