--- a/site/src/main/twirl/page.scala.html
+++ b/site/src/main/twirl/page.scala.html
@@ -16,9 +16,9 @@
     <link href="/favicon.ico" rel="icon" type="image/ico">
     <link href="http://fonts.googleapis.com/css?family=Signika:400,300,600,700" rel="stylesheet" type="text/css">
 
-    <link href="/css/vendor/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
     <link href="/css/mentor.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
 
     <!--link href="/css/vendor/fontello.css" rel="stylesheet"-->
@@ -36,7 +36,8 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
     <!-- <link href="/css/skin_blue.css" rel="stylesheet"/> -->
     <!-- <link href="/css/spray.css" rel="stylesheet"/> -->
