--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -13,18 +13,19 @@
                 Weighted overlay
             </h1>
             <p>
-                Try adjusting the time of day to change the height of the light source.
+                Try adjusting the weights for the proximity to a location to find the best spot in Philadelphia!
             </p>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h6 class="demo-controller-label">Bars</h6>
-                    </div>
-                    <div class="col-sm-6">
-                        <input type="text" id="controller-1-amount-1" class="demo-amount" disabled>
-                    </div>
+
+            <div class="row">
+                <div class="col-sm-6">
+                    <h6 class="demo-controller-label">Bars</h6>
                 </div>
+                <div class="col-sm-6">
+                    <input type="text" id="controller-1-amount-1" class="demo-amount" disabled>
+                </div>
+            </div>
             <div id="controller-1-slider-1"></div>
-            <br/>
+            <p>
             <div class="row">
                 <div class="col-sm-6">
                     <h6 class="demo-controller-label">Grocery Stores</h6>
@@ -33,9 +34,10 @@
                     <input type="text" id="controller-1-amount-2" class="demo-amount" disabled>
                 </div>
             </div>
-            <br/>
             <div id="controller-1-slider-2"></div>
+            </p>
 
+            <p>
             <div class="row">
                 <div class="col-sm-6">
                     <h6 class="demo-controller-label">Rail Stops</h6>
@@ -45,11 +47,15 @@
                 </div>
             </div>
             <div id="controller-1-slider-3"></div>
+            </p>
+
+            <p>
             <div id="map-preview-icons-1">
               <div class="map-preview-icon active"><img src="img/map-preview-icon-1.png"></div>
               <div data-target="#carousel-controller" data-slide-to="1" class="map-preview-icon"><img src="img/map-preview-icon-2.png"></div>
               <div data-target="#carousel-controller" data-slide-to="2" class="map-preview-icon"><img src="img/map-preview-icon-3.png"></div>
             </div>
+            </p>
         </div>
         <div id="controller-2" class="demo-container item">
             <h4 class="demo-controller-super-header">
