added placeholder ramp

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -16,6 +16,10 @@
                 Try adjusting the weights for the proximity to a location to find the best spot in Philadelphia!
             </p>
 
+            <p>
+                Low &nbsp; <img src="img/red-to-blue.png"> &nbsp; High
+            </p>
+
             <div class="row">
                 <div class="col-sm-6">
                     <h6 class="demo-controller-label">Bars</h6>
