--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -1,73 +1,71 @@
 @()
 
 <div id="interactive-demos">
-
     <div id="carousel-controller" class="carousel slide carousel-fade">
-
       <div class="carousel-inner" id="demo-controllers">
         <div id="controller-1" class="demo-container item active">
             <h4 class="demo-controller-super-header">
-                Demo 1/3
+                GeoTrellis in Action:
             </h4>
-            <h1 class="demo-controller-header">
+            <h2 class="demo-controller-header">
                 Weighted overlay
-            </h1>
+            </h2>
             <p>
                 Try adjusting the weights for the proximity to a location to find the best spot in Philadelphia!
             </p>
-
             <p>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h6 class="demo-controller-label">Bars</h6>
+                    </div>
+                    <div class="col-sm-6">
+                        <input type="text" id="controller-1-amount-1" class="demo-amount" disabled>
+                    </div>
+                </div>
+                <div class="slider-marker"></div>
+                <div id="controller-1-slider-1"></div>
+            </p>
+            <p>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h6 class="demo-controller-label">Grocery Stores</h6>
+                    </div>
+                    <div class="col-sm-6">
+                        <input type="text" id="controller-1-amount-2" class="demo-amount" disabled>
+                    </div>
+                </div>
+                <div class="slider-marker"></div>
+                <div id="controller-1-slider-2"></div>
+            </p>
+            <p>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h6 class="demo-controller-label">Rail Stops</h6>
+                    </div>
+                    <div class="col-sm-6">
+                        <input type="text" id="controller-1-amount-3" class="demo-amount" disabled>
+                    </div>
+                </div>
+                <div class="slider-marker"></div>
+                <div id="controller-1-slider-3"></div>
+            </p>
+            <p class="h6">
                 Low &nbsp; <img src="img/red-to-blue.png"> &nbsp; High
             </p>
-
-            <div class="row">
-                <div class="col-sm-6">
-                    <h6 class="demo-controller-label">Bars</h6>
-                </div>
-                <div class="col-sm-6">
-                    <input type="text" id="controller-1-amount-1" class="demo-amount" disabled>
+            <div id="map-preview-icons-1" class="map-preview-icons">
+                <div data-target="#carousel-controller" data-slide-to="1" class="map-preview-icon">
+                    <img src="img/map-preview-button-3.png">
+                    <div class="map-preview-label">Next: <strong>Hillshade</strong></div>
                 </div>
             </div>
-            <div id="controller-1-slider-1"></div>
-            <p>
-            <div class="row">
-                <div class="col-sm-6">
-                    <h6 class="demo-controller-label">Grocery Stores</h6>
-                </div>
-                <div class="col-sm-6">
-                    <input type="text" id="controller-1-amount-2" class="demo-amount" disabled>
-                </div>
-            </div>
-            <div id="controller-1-slider-2"></div>
-            </p>
-
-            <p>
-            <div class="row">
-                <div class="col-sm-6">
-                    <h6 class="demo-controller-label">Rail Stops</h6>
-                </div>
-                <div class="col-sm-6">
-                    <input type="text" id="controller-1-amount-3" class="demo-amount" disabled>
-                </div>
-            </div>
-            <div id="controller-1-slider-3"></div>
-            </p>
-
-            <p>
-            <div id="map-preview-icons-1">
-              <div class="map-preview-icon active"><img src="img/map-preview-icon-1.png"></div>
-              <div data-target="#carousel-controller" data-slide-to="1" class="map-preview-icon"><img src="img/map-preview-icon-2.png"></div>
-              <div data-target="#carousel-controller" data-slide-to="2" class="map-preview-icon"><img src="img/map-preview-icon-3.png"></div>
-            </div>
-            </p>
         </div>
         <div id="controller-2" class="demo-container item">
             <h4 class="demo-controller-super-header">
-                Demo 2/3
+                GeoTrellis in Action:
             </h4>
-            <h1 class="demo-controller-header">
+            <h2 class="demo-controller-header">
                 Hillshade
-            </h1>
+            </h2>
             <p>
                 The GeoTrellis hillshade operation computes the illumination angle and shadows of a surface given a light source. Try adjusting the time of day to change the height of the light source.
             </p>
@@ -80,19 +78,20 @@
                     </div>
                 </div>
             <div id="controller-2-slider-1"></div>
-            <div id="map-preview-icons-2">
-              <div data-target="#carousel-controller" data-slide-to="0" class="map-preview-icon"><img src="img/map-preview-icon-1.png"></div>
-              <div class="map-preview-icon active"><img src="img/map-preview-icon-2.png"></div>
-              <div data-target="#carousel-controller" data-slide-to="2" class="map-preview-icon"><img src="img/map-preview-icon-3.png"></div>
+            <div id="map-preview-icons-2" class="map-preview-icons">
+                <div data-target="#carousel-controller" data-slide-to="2" class="map-preview-icon">
+                    <img src="img/map-preview-button-1.png">
+                    <div class="map-preview-label">Next: <strong>Travelshed</strong></div>
+                </div>
             </div>
         </div>
         <div id="controller-3" class="demo-container item">
             <h4 class="demo-controller-super-header">
-                Demo 3/3
+                GeoTrellis in Action:
             </h4>
-            <h1 class="demo-controller-header">
+            <h2 class="demo-controller-header">
                 Travelshed
-            </h1>
+            </h2>
             <p>
                 The GeoTrellis travelshed operation computes the illumination angle and shadows of a surface given a light source. Try adjusting the time of day to change the height of the light source.
             </p>
@@ -117,16 +116,15 @@
                   </div>
                 </div>
             <div id="controller-3-slider-1"></div>
-            <div id="map-preview-icons-3">
-              <div data-target="#carousel-controller" data-slide-to="0" class="map-preview-icon"><img src="img/map-preview-icon-1.png"></div>
-              <div data-target="#carousel-controller" data-slide-to="1" class="map-preview-icon"><img src="img/map-preview-icon-2.png"></div>
-              <div class="map-preview-icon active"><img src="img/map-preview-icon-3.png"></div>
+            <div id="map-preview-icons-3" class="map-preview-icons">
+                <div data-target="#carousel-controller" data-slide-to="0" class="map-preview-icon">
+                    <img src="img/map-preview-button-2.png">
+                    <div class="map-preview-label">Next: <strong>Weighted Overlay</strong></div>
+                </div>
             </div>
         </div>
       </div>
-
     </div>
-
     <div id="carousel-map" class="carousel slide carousel-fade">
 
       <div class="carousel-inner" id="demo-maps">
@@ -151,9 +149,7 @@
         ›
       </a>
     </div>
-
 </div>
-
 <div id="what-is-geotrellis">
     <div class="container">
         <div class="row">
@@ -322,8 +318,4 @@
         </div>
     </div>
 </div>
-
 <script data-main="js/demo/main" src="js/require.min.js"></script>
-
-
-
