--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -106,11 +106,11 @@
                 <div class="row">
                   <div class="col-sm-12">
                     <div class="btn-group btn-group-justified" data-toggle="buttons">
-                      <label class="btn btn-primary active">
-                        <input type="radio" name="options" id="option1"><i class="icon-school"></i> Walking
-                      </label>
                       <label class="btn btn-primary">
-                        <input type="radio" name="options" id="option2"><i class="icon-bus"></i> Transit
+                        <input type="radio" name="options" id="option1" value="walking"><i class="icon-school"></i> Walking
+                      </label>
+                      <label class="btn btn-primary active">
+                        <input type="radio" name="options" id="option2" value="walking,train,bus" checked><i class="icon-bus"></i> Transit
                       </label>
                     </div>
                   </div>
