Add emphasis to 'GeoTrellis' under interactive maps

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -100,7 +100,7 @@
                         <h6 class="demo-controller-label">Type of Transportation</h6>
                     </div>
                     <div class="col-sm-6">
-                        
+
                     </div>
                 </div>
                 <div class="row">
@@ -139,7 +139,7 @@
         <div class="item">
             <div id="map-3" class="demo-map">
             </div>
-        </div>        
+        </div>
       </div>
 
       <a class="left carousel-control" data-target="#carousel-controller" data-slide="prev">
@@ -154,7 +154,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="overview">GeoTrellis is a fast raster processing library for the web and the cluster.</h2>
+                <h2 class="overview"><span class="brandname-emphasis">GeoTrellis</span> is a fast raster processing library for the web and the cluster.</h2>
             </div>
         </div>
     </div>
