--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -13,42 +13,44 @@
             <p>
                 Try adjusting the weights for the proximity to a location to find the best spot in Philadelphia!
             </p>
-            <p>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h6 class="demo-controller-label">Bars</h6>
+            <div class="controller-wrapper">
+                <div class="controller">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h6 class="demo-controller-label">Bars</h6>
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="text" id="controller-1-amount-1" class="demo-amount" disabled>
+                        </div>
                     </div>
-                    <div class="col-sm-6">
-                        <input type="text" id="controller-1-amount-1" class="demo-amount" disabled>
-                    </div>
+                    <div class="slider-marker"></div>
+                    <div id="controller-1-slider-1"></div>
                 </div>
-                <div class="slider-marker"></div>
-                <div id="controller-1-slider-1"></div>
-            </p>
-            <p>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h6 class="demo-controller-label">Grocery Stores</h6>
+                <div class="controller">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h6 class="demo-controller-label">Grocery Stores</h6>
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="text" id="controller-1-amount-2" class="demo-amount" disabled>
+                        </div>
                     </div>
-                    <div class="col-sm-6">
-                        <input type="text" id="controller-1-amount-2" class="demo-amount" disabled>
-                    </div>
+                    <div class="slider-marker"></div>
+                    <div id="controller-1-slider-2"></div>
                 </div>
-                <div class="slider-marker"></div>
-                <div id="controller-1-slider-2"></div>
-            </p>
-            <p>
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h6 class="demo-controller-label">Rail Stops</h6>
+                <div class="controller">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h6 class="demo-controller-label">Rail Stops</h6>
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="text" id="controller-1-amount-3" class="demo-amount" disabled>
+                        </div>
                     </div>
-                    <div class="col-sm-6">
-                        <input type="text" id="controller-1-amount-3" class="demo-amount" disabled>
-                    </div>
+                    <div class="slider-marker"></div>
+                    <div id="controller-1-slider-3"></div>
                 </div>
-                <div class="slider-marker"></div>
-                <div id="controller-1-slider-3"></div>
-            </p>
+            </div>
             <p class="h6">
                 Low &nbsp; <img src="img/red-to-blue.png"> &nbsp; High
             </p>
