--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -141,7 +141,7 @@
                         <img src="/img/case_study_lg_02.png" />
                     </div>
                     <div class="modal-body-sidebar col-md-3">
-                        <a class="btn btn-primary btn-md" role="button" href="http://gis.ashevillenc.gov/mapasheville/priorityplaces/">Visit Site</a>
+                        <a class="btn btn-primary btn-md" role="button" href="http://priorityplaces.ashevillenc.gov/index.html">Visit Site</a>
                     </div>
                     <br style="clear: both">
                 </div>
