Added sun slider

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -78,10 +78,10 @@
                             <h6 class="demo-controller-label">Time</h6>
                         </div>
                         <div class="col-sm-6">
-                            <input type="text" id="controller-2-amount-1" class="demo-amount" disabled>
+                            <input type="text" id="sun-time" class="demo-amount" disabled>
                         </div>
                     </div>
-                    <div id="controller-2-slider-1"></div>
+                    <div class="sun-slider-content"></div>
                 </div>
             </div>
             <div id="map-preview-icons-2" class="map-preview-icons">
