--- a/site/src/main/twirl/page.scala.html
+++ b/site/src/main/twirl/page.scala.html
@@ -20,11 +20,11 @@
     <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
     <link href="/css/mentor.min.css" rel="stylesheet"/>
 
-
     <!--link href="/css/vendor/fontello.css" rel="stylesheet"-->
 
     <link href="/css/main.css" rel="stylesheet">
-    
+    <link href="/css/slider.css" rel="stylesheet"/>
+  
     <script src='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js'></script>
     <link href='http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.css' rel='stylesheet' />
     <!--[if lte IE 8]>
@@ -37,7 +37,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>    
 
     <!-- <link href="/css/skin_blue.css" rel="stylesheet"/> -->
     <!-- <link href="/css/spray.css" rel="stylesheet"/> -->
